Se cambio el avatar, la frase y los datos personales del inicio.

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="half-section">
      <div class="avatar-container">
       <img src="./assets/avatar.png" alt="">
-      <h3>"Yo, disfrutando de mi café..."</h3>
+      <h3>"Preparado para otro día de códigos..."</h3>
      </div>
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">Hola!, <br> Soy Nombre y Apellido </h1>
+        <h1 class="title">Hola!, <br> Soy Oscar Cesar Ugarte </h1>
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
