Se personalizó la sección sobre mi.

--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sint porro reiciendis debitis et harum animi rem fugit eaque. Officia maxime id ipsum culpa temporibus dolore saepe quos quasi debitis.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam rem quam, corporis itaque dolor deserunt libero doloremque quibusdam repellat quidem doloribus quia eos officia placeat, quasi, odit repellendus ipsa.
+        Actualmente me encuentro cursando la carrera de Analista Programador Universitario en la Universidad Nacional de Jujuy. Una carrera muy buena que me ha enseñado grandes bases y herramientas.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
+        Mi áreas de interés en la informática son el desarrollo web, en especial el front end y los sistemas operativos Linux: 
+        Llevo usando linux Ubuntu desde el 2013 y me he encariñado con su funcionalidad aunque todavía no manejo al 100% la terminal. 
+        En cuanto al área web conozco las bases de Html5, Css, Javascript con Bootstrap y algo de Angular. También he visto un poco de Php y Java.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
+        En cuanto a mis pasatiempos prefiero el básquet, salir a caminar y trabajar en el jardín con mis plantas.
       </p>
     </aside>
     <aside class="half-section title-section">
