--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
       <div class="footer-section-container">
         <p>
-          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Nombre y Apellido</a>
+          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Oscar Cesar Ugarte</a>
         </p>
       </div>
   </footer>
