Se editó la parte de proyectos para mostrar un contenido distinto. Se usaron proyectos ficticios.

--- a/index.html
+++ b/index.html
@@ -80,29 +80,26 @@
     <aside class="half-section text-section">
         <ul class="project-list">
           <li>
-            <h3>Proyecto 1</h3>
+            <h3>Proyecto 1 - Juego de la Ruleta en C++</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              Un juego de la ruleta donde se cargan jugadores y cada jugador realiza una apuesta que se decidira en una jugada.
+              Se usan estructuras de datos como listas y árboles. Los jugadores cargados junto a sus ganancias y perdidas se guardan en un archivo.
+            </p>
+            <a class="project-link" href="https://github.com/oscar-ugarte/EDTrabajoFinal"><i class="bi bi-github"></i> Ver más</a>
+          </li>
+          <li>
+            <h3>Proyecto 2 - Escuchame Jujuy</h3>
+            <p>
+              Una página sencilla donde puedes ver las radios de la provincia Jujuy y enterarte de información útil como su sitio web o medios de contacto.
+              Esta hecha con Html5, Css3, Javascript y Bootstrap 5.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
-            <h3>Proyecto 2</h3>
+            <h3>Proyecto 3 - Comedor Universitario</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
-            </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
-          </li>
-          <li>
-            <h3>Proyecto 3</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              Una página web donde podrás ver los distinto menús del comedor de la universidad y los alumnos podrán acceder para ver los descuentos que les corresponden y su historial de consumo.
+              La idea de este proyecto se implementa usando un backend con java y jsp junto a una base de datos mysql. Mientras que en el frontend se usa Html5, Css3, Javascript puro y Bootstrap 5.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
