Se escogieron 3 tipografias y se las aplicó al index. Se opto por usar las fuentes descargadas.

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
   
   <section id="about" class="content">
     <aside class="half-section text-section">
-      <p>
+      <p .parrafo>
         Actualmente me encuentro cursando la carrera de Analista Programador Universitario en la Universidad Nacional de Jujuy. Una carrera muy buena que me ha enseñado grandes bases y herramientas.
       </p>
-      <p>
+      <p .parrafo>
         Mi áreas de interés en la informática son el desarrollo web, en especial el front end y los sistemas operativos Linux: 
         Llevo usando linux Ubuntu desde el 2013 y me he encariñado con su funcionalidad aunque todavía no manejo al 100% la terminal. 
         En cuanto al área web conozco las bases de Html5, Css, Javascript con Bootstrap y algo de Angular. También he visto un poco de Php y Java.
       </p>
-      <p>
+      <p .parrafo>
         En cuanto a mis pasatiempos prefiero el básquet, salir a caminar y trabajar en el jardín con mis plantas.
       </p>
     </aside>
@@ -81,7 +81,7 @@
         <ul class="project-list">
           <li>
             <h3>Proyecto 1 - Juego de la Ruleta en C++</h3>
-            <p>
+            <p .parrafo>
               Un juego de la ruleta donde se cargan jugadores y cada jugador realiza una apuesta que se decidira en una jugada.
               Se usan estructuras de datos como listas y árboles. Los jugadores cargados junto a sus ganancias y perdidas se guardan en un archivo.
             </p>
@@ -89,7 +89,7 @@
           </li>
           <li>
             <h3>Proyecto 2 - Escuchame Jujuy</h3>
-            <p>
+            <p .parrafo>
               Una página sencilla donde puedes ver las radios de la provincia Jujuy y enterarte de información útil como su sitio web o medios de contacto.
               Esta hecha con Html5, Css3, Javascript y Bootstrap 5.
             </p>
@@ -97,7 +97,7 @@
           </li>
           <li>
             <h3>Proyecto 3 - Comedor Universitario</h3>
-            <p>
+            <p .parrafo>
               Una página web donde podrás ver los distinto menús del comedor de la universidad y los alumnos podrán acceder para ver los descuentos que les corresponden y su historial de consumo.
               La idea de este proyecto se implementa usando un backend con java y jsp junto a una base de datos mysql. Mientras que en el frontend se usa Html5, Css3, Javascript puro y Bootstrap 5.
             </p>
