Se agregaron iconos al menu.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <a href="#" class="logo">Mi Portfolio</a>
       <ul class="menu">
         <li class="menu-item">
-          <a href="#home">Inicio</a>
+          <a href="#home"><i class="bi bi-house-door"></i> Inicio</a>
         </li>
         <li class="menu-item">
-          <a href="#about">Sobre mí</a>
+          <a href="#about"><i class="bi bi-person-lines-fill"></i> Sobre mí</a>
         </li>
         <li class="menu-item">
-          <a href="#projects">Experiencia</a>
+          <a href="#projects"><i class="bi bi-journal-arrow-up"></i> Experiencia</a>
         </li>
         <li class="menu-item">
-          <a href="#contact">Contacto</a>
+          <a href="#contact"><i class="bi bi-pencil-square"></i> Contacto</a>
         </li>
       </ul>
     </nav>
@@ -39,7 +39,7 @@
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">Hola!, <br> Soy Oscar Cesar Ugarte </h1>
+        <h1 class="title">Hola!, <br> Soy Oscar Cesar Ugarte </h1> 
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
