--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
   <section id="contact" class="content">
     <aside class="half-section text-section">
       <form action="">
-        <label for="name">Nombre</label>
+        <label for="name">Nombre :</label>
         <input class="input-field" type="text" name="name" id="name">
-        <label for="email">Email</label>
+        <label for="email">Email :</label>
         <input class="input-field type="email" name="email" id="email">
-        <label for="message">Mensaje</label>
+        <label for="message">Mensaje :</label>
         <textarea class="input-field" name="message" id="message" cols="30" rows="10"></textarea>
         <input class="btn-send-message" type="submit" value="Enviar">
     </aside>
