--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="half-section">
      <div class="avatar-container">
       <img src="./assets/avatar.png" alt="">
-      <h3>"Preparado para otro día de códigos..."</h3>
+      <h3 class="frase">"Preparado para otro día de códigos..."</h3>
      </div>
     </div>
     <div class="half-section text-section">
@@ -48,7 +48,7 @@
           <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
         </ul>
   
-        <p class="description">+15 años de experiencia trabajando en aplicaciones de alta escala. <br> Déjame contarte un poco de mí, sigue deslizando!</p>
+        <p class="description">Un fanático de la informática desde hace 14 años.<br> Déjame contarte un poco de mí, sigue deslizando!</p>
       </div>
 
     </div>
@@ -57,15 +57,15 @@
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p .parrafo>
-        Actualmente me encuentro cursando la carrera de Analista Programador Universitario en la Universidad Nacional de Jujuy. Una carrera muy buena que me ha enseñado grandes bases y herramientas.
+        Actualmente me encuentro cursando la carrera de Analista Programador Universitario en la Universidad Nacional de Jujuy. Una excelente carrera que me ha enseñado muy buenas herramientas.
       </p>
       <p .parrafo>
-        Mi áreas de interés en la informática son el desarrollo web, en especial el front end y los sistemas operativos Linux: 
-        Llevo usando linux Ubuntu desde el 2013 y me he encariñado con su funcionalidad aunque todavía no manejo al 100% la terminal. 
-        En cuanto al área web conozco las bases de Html5, Css, Javascript con Bootstrap y algo de Angular. También he visto un poco de Php y Java.
+        Mis áreas de interés en la informática giran entorno al desarrollo web (en especial el front end), Linux y la Programación: 
+        <br>Llevo usando Linux Ubuntu desde el 2013 y me he encariñado con su funcionalidad aunque todavía no manejo al 100% la terminal. 
+        <br>En cuanto al área web conozco las bases de Html5, Css, Javascript con Bootstrap y algo de Angular. También he visto un poco de Php y Java.
       </p>
       <p .parrafo>
-        En cuanto a mis pasatiempos prefiero el básquet, salir a caminar y trabajar en el jardín con mis plantas.
+        Mis deportes favoritos son el básquetbol y ciclismo. Mis pasatiempos son la lectura (En general), la caminata (Un poco todos los días) y la jardinería (Cuidar mis frutales).
       </p>
     </aside>
     <aside class="half-section title-section">
@@ -80,10 +80,10 @@
     <aside class="half-section text-section">
         <ul class="project-list">
           <li>
-            <h3>Proyecto 1 - Juego de la Ruleta en C++</h3>
+            <h3>Proyecto 1 - Juego de la Ruleta en C++ - Proyecto Final de Estructura de Datos</h3>
             <p .parrafo>
               Un juego de la ruleta donde se cargan jugadores y cada jugador realiza una apuesta que se decidira en una jugada.
-              Se usan estructuras de datos como listas y árboles. Los jugadores cargados junto a sus ganancias y perdidas se guardan en un archivo.
+              <br>Se usan estructuras de datos como listas y árboles. Los jugadores cargados junto a sus ganancias y perdidas se guardan en un archivo.
             </p>
             <a class="project-link" href="https://github.com/oscar-ugarte/EDTrabajoFinal"><i class="bi bi-github"></i> Ver más</a>
           </li>
@@ -91,15 +91,15 @@
             <h3>Proyecto 2 - Escuchame Jujuy</h3>
             <p .parrafo>
               Una página sencilla donde puedes ver las radios de la provincia Jujuy y enterarte de información útil como su sitio web o medios de contacto.
-              Esta hecha con Html5, Css3, Javascript y Bootstrap 5.
+              <br>Esta hecha con Html5, Css3, Javascript y Bootstrap 5.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
             <h3>Proyecto 3 - Comedor Universitario</h3>
             <p .parrafo>
-              Una página web donde podrás ver los distinto menús del comedor de la universidad y los alumnos podrán acceder para ver los descuentos que les corresponden y su historial de consumo.
-              La idea de este proyecto se implementa usando un backend con java y jsp junto a una base de datos mysql. Mientras que en el frontend se usa Html5, Css3, Javascript puro y Bootstrap 5.
+              Una página web donde podrás ver los distinto menús diarios y comidas disponibles del comedor de la universidad.
+              <br>La idea de este proyecto es implementar un Backend con Java y Jsp junto a una base de datos Mysql. Mientras que en el Frontend se usa Html5, Css3, Javascript puro y Bootstrap 5.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
